<resources>
    <string name="app_name">Doosra</string>
    <string name="splash_screen_txt">Medical Second Opinion</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="history">History</string>
    <string name="log_out">Logout</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="update_profile">Update Profile</string>
    <string name="password">Password</string>
    <string name="password_forgot">Forgot Password?</string>
    <string name="sign_up_string">Do not have an account? <i><u>Sign Up</u></i></string>

    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>


    <string name="reset_password">Reset Password</string>
    <string name="already_have_an_account_login">Already have an account? <i><u>Login</u></i></string>
    <string name="activate_your_account">Please activate your account !</string>
    <string name="check_password">Please enter correct password</string>
    <string name="email_not_exist">Email does not exist on server</string>
    <string name="old_password">Password reset key</string>
    <string name="new_password">New Password</string>
    <string name="reset">Reset</string>
    <string name="recover">Recover</string>

    <string name="verification_code">Verification Code</string>
    <string name="resend">Resend</string>
    <string name="activate">Activate</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="login_faild">Login Failed!</string>
    <string name="account_activation">Account Activation</string>
    <string name="short_history">Short history of complaints</string>
    <string name="disease_details">Existing Disease if any</string>
    <string name="concern_details">Write your concern</string>
    <string name="next_button">NEXT</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="permission_denied">Permission denied !</string>
    <string name="button_continue">Continue</string>
    <string name="camera_storage_permission">Camera and Storage Permission required for this app</string>
    <string name="go_settings_permission">Go to settings and enable permissions</string>
    <string name="ok_button">OK</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_library">Choose from Library</string>
    <string name="cancel_photo">Cancel</string>
    <string name="select_photo">Select Photo</string>
    <string name="select_file">Select File</string>
    <string name="photo_cancel">Cancel</string>
    <string name="cancel">Cancel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="edit_save">Edit Profile</string>
    <string name="how_it_works"><u>How It Works</u></string>
    <string name="about_us"><u>About Us</u></string>
    <string name="board_of_doctors"><u>Board of Doctors</u></string>
    <string name="processing_transaction">Processing Transaction</string>
    <string name="offer_text">Actual price for opinion is 5000INR, we are offering 2000INR as an introductory price.</string>
    <!--<string name="offer_text_paytm">You will get response after you pay the introductory price.\nPay via Paytm +91-9946371350</string>-->

    <!--\nYou will get response after you pay the introductory price.\nPay via Paytm +919946371350-->
    <string name="offer_text_paytm">Data submitted successfully!!\nThanks for using DOOSRA\nYou will get response after you pay the introductory price.\nPay via Paytm +919946371350</string>
    <string name="string_for_surgical">you can avail this option when you are concerned about Whether the advised surgery is actually needed or not.</string>
    <string name="string_for_treatment">You can go for this when there is a confusion regarding non-surgical treatment modalities like chemo-radio-Pharmaw – Laser – interventional- cardiological therapies. </string>
    <string name="string_for_diagnostic">Used when there is diagnostic dilemma that is a confusion regarding diagnosis or where there is no diagnostic consensus has been made.

    </string>
    <string name="error_text">There was some error please try again.</string>
    <string name="opinion_at_your_fingertips">Opinion At Your Fingertips</string>
</resources>
