<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/screen_background_color">

    <RelativeLayout
        android:id="@+id/card_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:id="@+id/image_view_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_user_placeholder"
                    app:civ_border_color="@color/green_button_color"
                    app:civ_border_width="1dp" />

                <View
                    android:id="@+id/image_view"
                    android:layout_width="1dp"
                    android:layout_height="80dp"
                    android:layout_margin="15dp"
                    android:layout_toRightOf="@+id/user_image"
                    android:background="@color/blue_button_color" />

                <RelativeLayout
                    android:id="@+id/layout_use_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/image_view">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Full Name"
                        android:textColor="#000"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_use_email"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/image_view">

                    <TextView
                        android:id="@+id/tv_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Age: 19"
                        android:textColor="#000"
                        android:textSize="18sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_user_name"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/image_view">

                    <TextView
                        android:id="@+id/tv_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="weight: 80"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:text="Height : 6"
                        android:textColor="#000"
                        android:textSize="18sp" />

                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view_layout"
        android:layout_marginTop="15dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_by_opinion_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/short_history_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:gravity="top|left"
                        android:hint="@string/short_history"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:maxLength="120"
                        android:maxLines="10"
                        android:paddingLeft="5dp"
                        android:paddingTop="@dimen/floating_hint_margin"
                        android:textColor="@color/green_button_color"
                        android:textSize="15sp"
                        android:theme="@style/EditTextStyle" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/disease_details_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:gravity="top|left"
                        android:hint="@string/disease_details"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:maxLength="120"
                        android:maxLines="10"
                        android:paddingLeft="5dp"
                        android:paddingTop="@dimen/floating_hint_margin"
                        android:textColor="@color/green_button_color"
                        android:textColorHint="#4ca64c" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/concerns_details_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:gravity="top|left"
                        android:hint="@string/concern_details"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:maxLength="120"
                        android:maxLines="10"
                        android:paddingLeft="5dp"
                        android:paddingTop="@dimen/floating_hint_margin"
                        android:textColor="@color/green_button_color"
                        android:textColorHint="#4ca64c" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_next"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/blue_button_color"
                    android:text="@string/next_button"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>
